--- a/DansWpfComponents/DansWpfComponents.Demo/MainWindow.xaml
+++ b/DansWpfComponents/DansWpfComponents.Demo/MainWindow.xaml
@@ -34,6 +34,10 @@
                 <DataTemplate DataType="{x:Type viewModels:ScrollableTabControlDemoViewModel}">
                     <views:ScrollableTabControlDemoView />
                 </DataTemplate>
+
+                <DataTemplate DataType="{x:Type viewModels:FlippableScrollViewerDemoViewModel}">
+                    <views:FlippableScrollViewerDemoView />
+                </DataTemplate>
             </TabControl.Resources>
 
             <TabControl.ItemTemplate>
