--- a/DansWpfComponents/DansWpfComponents.Demo/MainWindow.xaml
+++ b/DansWpfComponents/DansWpfComponents.Demo/MainWindow.xaml
@@ -9,11 +9,8 @@
         mc:Ignorable="d"
         Title="MainWindow"
         Height="450"
-        Width="800">
-    <Window.DataContext>
-        <viewModels:MainViewModel />
-    </Window.DataContext>
-
+        Width="800"
+        d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel, IsDesignTimeCreatable=False}">
     <Grid>
         <components:ScrollableTabControl TabStripPlacement="{Binding ScrollableTabControlDemoViewModel.TabStripPlacement}"
                                          Margin="5"
