--- a/DansWpfComponents/DansWpfComponents.Demo/Views/ScrollableTabControlDemoView.xaml
+++ b/DansWpfComponents/DansWpfComponents.Demo/Views/ScrollableTabControlDemoView.xaml
@@ -10,27 +10,82 @@
              d:DesignHeight="450"
              d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=viewModels:ScrollableTabControlDemoViewModel, IsDesignTimeCreatable=True}">
-    <Grid>
-        <StackPanel>
-            <ComboBox SelectedValue="{Binding TabLayout}"
-                      ItemsSource="{utility:EnumToCollectionConverter {x:Type enums:TabLayout}}"
-                      DisplayMemberPath="Description"
-                      SelectedValuePath="Value" />
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-            <ComboBox SelectedValue="{Binding ScrollBarVisibility}"
-                      ItemsSource="{utility:EnumToCollectionConverter {x:Type enums:ScrollBarVisibility}}"
-                      DisplayMemberPath="Description"
-                      SelectedValuePath="Value" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-            <ComboBox SelectedValue="{Binding ScrollBarPosition}"
-                      ItemsSource="{utility:EnumToCollectionConverter {x:Type enums:ScrollBarPosition}}"
-                      DisplayMemberPath="Description"
-                      SelectedValuePath="Value" />
+        <TextBlock Grid.Column="0"
+                   Grid.Row="0"
+                   Grid.ColumnSpan="2"
+                   HorizontalAlignment="Center"
+                   Margin="10"
+                   FontSize="14"
+                   Text="This effects the main tab control. Check it out!" />
 
-            <ComboBox SelectedValue="{Binding TabStripPlacement}"
-                      ItemsSource="{utility:EnumToCollectionConverter {x:Type Dock}}"
-                      DisplayMemberPath="Description"
-                      SelectedValuePath="Value" />
-        </StackPanel>
+        <TextBlock Grid.Column="0"
+                   Grid.Row="1"
+                   Text="TabLayout: "
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center" />
+
+        <ComboBox Grid.Column="1"
+                  Grid.Row="1"
+                  SelectedValue="{Binding TabLayout}"
+                  ItemsSource="{utility:EnumToCollectionConverter {x:Type enums:TabLayout}}"
+                  DisplayMemberPath="Description"
+                  SelectedValuePath="Value"
+                  Margin="0 5" />
+
+        <TextBlock Grid.Column="0"
+                   Grid.Row="2"
+                   Text="ScrollBarVisibility: "
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center" />
+
+        <ComboBox Grid.Column="1"
+                  Grid.Row="2"
+                  SelectedValue="{Binding ScrollBarVisibility}"
+                  ItemsSource="{utility:EnumToCollectionConverter {x:Type enums:ScrollBarVisibility}}"
+                  DisplayMemberPath="Description"
+                  SelectedValuePath="Value"
+                  Margin="0 5" />
+
+        <TextBlock Grid.Column="0"
+                   Grid.Row="3"
+                   Text="ScrollBarPosition: "
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center" />
+
+        <ComboBox Grid.Column="1"
+                  Grid.Row="3"
+                  SelectedValue="{Binding ScrollBarPosition}"
+                  ItemsSource="{utility:EnumToCollectionConverter {x:Type enums:ScrollBarPosition}}"
+                  DisplayMemberPath="Description"
+                  SelectedValuePath="Value"
+                  Margin="0 5" />
+
+        <TextBlock Grid.Column="0"
+                   Grid.Row="4"
+                   Text="TabStripPlacement: "
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center" />
+
+        <ComboBox Grid.Column="1"
+                  Grid.Row="4"
+                  SelectedValue="{Binding TabStripPlacement}"
+                  ItemsSource="{utility:EnumToCollectionConverter {x:Type Dock}}"
+                  DisplayMemberPath="Description"
+                  SelectedValuePath="Value"
+                  Margin="0 5" />
     </Grid>
 </UserControl>
