--- a/DansWpfComponents/DansWpfComponents.Demo/Views/BlurredHolderDemoView.xaml
+++ b/DansWpfComponents/DansWpfComponents.Demo/Views/BlurredHolderDemoView.xaml
@@ -6,6 +6,8 @@
              xmlns:viewModels="clr-namespace:DansWpfComponents.Demo.ViewModels"
              xmlns:components="clr-namespace:DansWpfComponents.Components;assembly=DansWpfComponents"
              xmlns:utility="clr-namespace:DansWpfComponents.Utility;assembly=DansWpfComponents"
+             xmlns:demoUtility="clr-namespace:DansWpfComponents.Demo.Utility"
+             xmlns:system="clr-namespace:System;assembly=System.Runtime"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800"
@@ -131,8 +133,50 @@
             </TabItem>
 
             <TabItem Header="Image">
-                <!-- TODO Add way to select an image and put in blur component -->
-                <TextBlock Text="Select an image" />
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0"
+                               Grid.Row="0"
+                               Text="Image: "
+                               VerticalAlignment="Center"
+                               Margin="5 0 2 0" />
+
+                    <ComboBox x:Name="ImageSelector"
+                              Grid.Column="1"
+                              Grid.Row="0"
+                              SelectedIndex="0"
+                              Margin="0 5 5 5"
+                              DisplayMemberPath="Key"
+                              SelectedValuePath="Value">
+                        <demoUtility:StringKeyValuePair Key="Demo Image 01" Value="../Resources/DemoImage01.jpg" />
+                        <demoUtility:StringKeyValuePair Key="Demo Image 02" Value="../Resources/DemoImage02.jpg" />
+                        <demoUtility:StringKeyValuePair Key="Demo Image 03" Value="../Resources/DemoImage03.jpg" />
+                        <demoUtility:StringKeyValuePair Key="Demo Image 04" Value="../Resources/DemoImage04.jpg" />
+                        <demoUtility:StringKeyValuePair Key="Demo Image 05" Value="../Resources/DemoImage05.png" />
+                    </ComboBox>
+
+                    <components:BlurredHolder Grid.Column="0"
+                                              Grid.Row="1"
+                                              Grid.ColumnSpan="2"
+                                              BlurOverlayRadius="{Binding OverlayRadius}"
+                                              Background="Transparent"
+                                              BlurOverlayEnabled="{Binding OverlayEnabled}"
+                                              BlurOverlayOpacity="{Binding OverlayOpacity}"
+                                              BlurOverlayKernelType="{Binding OverlayKernelType}"
+                                              BlurOverlayColor="{Binding OverlayColor}">
+                        <Image Source="{Binding ElementName=ImageSelector, Path=SelectedValue, Mode=OneWay}"
+                               Stretch="Uniform"/>
+                    </components:BlurredHolder>
+                </Grid>
             </TabItem>
         </components:ScrollableTabControl>
     </Grid>
